<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/welcome_to_alc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/button_about"
            android:layout_marginBottom="188dp" android:textSize="30sp"
            android:textAlignment="center" tools:text="TextView" android:textStyle="bold"/>
    <Button
            android:text="@string/about_alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_about" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="280dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:textAlignment="center"
            android:backgroundTint="#009688"/>
    <Button
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_profile" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_about" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintVertical_bias="0.097" android:textAlignment="center" android:backgroundTint="#009688"/>
</android.support.constraint.ConstraintLayout>