<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity" android:minWidth="2dp">
    <ImageView
            android:layout_width="190dp"
            android:layout_height="219dp" app:srcCompat="@drawable/mwj_pic"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardView10"/>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/cardView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/divider2" app:cardElevation="4dp">
        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:textSize="24sp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    </android.support.v7.widget.CardView>
    <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/cardView10" app:layout_constraintBottom_toTopOf="@+id/cardView2"/>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:cardElevation="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/divider2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/cardView6" android:textAlignment="center">
        <TextView
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:cardElevation="4dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/cardView6"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/cardView7">
        <TextView
                android:text="@string/counrty"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:textAlignment="center" android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:cardElevation="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/cardView7"
            app:layout_constraintTop_toBottomOf="@+id/cardView6" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/cardView8">
        <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:textAlignment="center" android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:cardElevation="4dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/cardView8"
            app:layout_constraintTop_toBottomOf="@+id/cardView7" app:layout_constraintBottom_toTopOf="@+id/cardView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
        <TextView
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:textAlignment="center" android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:cardElevation="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/cardView9"
            app:layout_constraintTop_toBottomOf="@+id/cardView8"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/slack_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:textAlignment="center" android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>